<resources>
    <string name="app_name">ClientProjectContactList</string>
    <string name="addEmail">Add Email</string>
    <string name="contactList">Contact List</string>
    <string name="addPhone">Add Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactName">Contact Name</string>
    <string name="enterName">Enter Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="enterEmail">Enter Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="enterNumber">Enter Number</string>
    <string name="name">Name: </string>
    <string name="details">Details: </string>
    <string name="nameOutput">Test Name</string>
    <string name="testOutput">name or email</string>
    <string name="SubmitBtn">Submit</string>
</resources>