<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10sp"
        >

        <TextView
            android:id="@+id/addEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmail"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_marginVertical="30sp"

            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"

            />

        <TextView
            android:id="@+id/contactNameEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactName"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginVertical="10sp"/>

        <EditText
            android:id="@+id/cEmailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enterName"
            android:layout_marginStart="20sp"
            android:layout_marginVertical="10sp"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/contactEmailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailAddress"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15sp"
            android:layout_marginVertical="10sp"
            />

        <EditText
            android:id="@+id/cEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterEmail"
            android:layout_marginStart="20sp"
            android:layout_marginVertical="10sp" />

        <Button
            android:id="@+id/emailSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SubmitBtn"
            android:backgroundTint="@color/grey"/>
    </LinearLayout>
</FrameLayout>