<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/nameOutputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameOutput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameView"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"

        />

    <TextView
        android:id="@+id/detailsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameView"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/testOutputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testOutput"
        app:layout_constraintTop_toBottomOf="@id/nameOutputView"
        app:layout_constraintStart_toEndOf="@id/detailsView"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/round_contacts_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/testOutputView"
        app:layout_constraintBottom_toTopOf="@id/divider"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/detailsView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
